# python_sbert_mysql_embeddings_search

./: config.py  db.py  embedding.py  pyproject.toml  query.py  sql.sql  store.py
