[project]
name = "sbert-mysql"
version = "0.1.0"
description = ""
authors = [
    {name = "Ganesh Nayanajith",email = "ganeshnayanajith40@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers (>=3.4.0,<4.0.0)",
    "mysql-connector-python (>=9.2.0,<10.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
